--- a/notes/src/components/Note/Note.scss
+++ b/notes/src/components/Note/Note.scss
@@ -28,11 +28,13 @@
         }
 
         .card {
-            // font-family: 'Roboto', sans-serif;
+            font-family: 'Poppins', sans-serif;
+
             .card-body {
                 .card-text {
                     text-align: justify;
                     word-spacing: normal;
+                    font-size: 0.9rem;
 
                     @media screen and (min-device-width: 768px) and (max-device-width: 992px) {
                         font-size: 0.8rem;
